--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,7 +9,6 @@
 @import '~@fortawesome/fontawesome-free/scss/regular';
 @import '~@fortawesome/fontawesome-free/scss/solid';
 @import '~@fortawesome/fontawesome-free/scss/brands';
-
 /* universal */
 
 body {
@@ -71,7 +70,7 @@ body {
   }
 }
 /* Topic Index Page */
-.topics-index-page, .categories-show-page {
+.topics-index-page, .categories-show-page, .root-page {
   .topic-list {
     .nav>li>a {
       position: relative;
@@ -109,9 +108,10 @@ body {
 #app > div.container {
   margin-bottom: 100px;
 }
+
 .simditor-body img {
   max-width:100%;
-} 
+}
 /* Topic Show Page */
 
 @import "topic_body";
@@ -139,4 +139,19 @@ body {
         font-size: .9em;
         color: #b3b3b3;
     }
+}
+/* 消息通知 */
+.notification-badge {
+  .badge {
+    font-size: 12px;
+    margin-top: 14px;
+  }
+
+  .badge-secondary {
+    background-color: #EBE8E8;
+  }
+
+  .badge-hint {
+    background-color: #d15b47 !important;
+  }
 }
